# badminton

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/superpowers/plans/: 2026-06-28-multi-nickname-identity-and-name-discovery.md  2026-06-28-tournament-first-upcoming-discovery.md  2026-06-28-upcoming-tournament-timeline.md  2026-06-29-live-upcoming-next-match.md  2026-06-29-player-dedup-and-core-group.md  2026-06-30-private-archive-crawler.md  2026-07-01-archive-historical-discovery.md  2026-07-01-bracket-visualization.md  2026-07-02-drop-archive-password-gate.md
docs/superpowers/specs/: 2026-06-28-multi-nickname-identity-and-name-discovery-design.md  2026-06-28-tournament-first-upcoming-discovery-design.md  2026-06-28-upcoming-tournament-timeline-design.md  2026-06-29-live-upcoming-next-match-design.md  2026-06-30-private-archive-crawler-design.md  (+3 more)
src/badminton_tracker/: __init__.py  __main__.py  aliases.py  archive_crawl.py  archive_db.py  archive_discover.py  archive_enumerate.py  archive_fetch.py  archive_parse.py  archive_profile.py  build.py  client.py  config.py  core_group.py  discover.py  discover_names.py  discovery_queue.py  excel_source.py  exclude.py  export.py  fetch.py  identity.py  identity_seed.py  parse.py  roster.py  search.py  serve.py  server.py  stats.py  upcoming_build.py  upcoming_find.py  upcoming_parse.py  upcoming_participants.py  upcoming_path.py  upcoming_schedule.py  upcoming_schedule_parse.py  upcoming_text.py  validate.py  versioning.py
tests/: test_aliases.py  test_archive_crawl.py  test_archive_db.py  test_archive_discover.py  test_archive_endpoints.py  test_archive_enumerate.py  test_archive_parse.py  test_archive_privacy.py  test_archive_profile.py  test_archive_viz_seed.py  test_discovery_queue.py  test_exclude.py  test_export_core.py  test_export_dedup.py  test_identity.py  test_identity_seed.py  test_privacy_guards.py  test_upcoming_build.py  test_upcoming_find.py  test_upcoming_parse.py  test_upcoming_participants.py  test_upcoming_path.py  test_upcoming_schedule.py  test_upcoming_schedule_parse.py  test_upcoming_text.py
web/: app.js  archive.js  config.js  data.json  index.html  maintain.js  styles.css  upcoming.json
windows/: install-autostart.ps1  publish-upcoming.bat  publish.bat  redeploy.bat  run-no-docker.bat  start.bat  stop.bat
(+11 files in other folders)
